# oci-document-understanding-poc

./: .dockerignore  Dockerfile  README.md  app.py  barcode_service.py  config.py  driver_license_all_states_schema.json  logging_config.py  models.py  normalize.py  oci_client.py  pyproject.toml
infra/: main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
scripts/: deploy-image.sh
tests/: test_normalize.py
