[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oci-driver-license-poc"
version = "0.1.0"
description = "Streamlit proof of concept for OCI Document Understanding driver-license capture."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "oci>=2.160.0",
  "streamlit>=1.39.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "ruff>=0.8.0",
]

[tool.hatch.build.targets.wheel]
only-include = [
  "app.py",
  "config.py",
  "logging_config.py",
  "models.py",
  "normalize.py",
  "oci_client.py",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF", "D"]
ignore = ["D203", "D213"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
